--- a/site/views/components/badge.pug
+++ b/site/views/components/badge.pug
@@ -38,6 +38,7 @@ block contents
                             pre
                                 code.language-markup
                                     | #{code}
+            .section-contents
                 h4.contents-title 타입
                 .ga-card.attached
                     .contents-wrapper
@@ -56,6 +57,7 @@ block contents
                                     | #{code}
                                     |  #{`<!-- Mark Type -->`}
                                     | #{code1}
+            .section-contents
                 h4.contents-title 원과 함꼐
                 .ga-card.attached
                     .contents-wrapper
@@ -72,6 +74,7 @@ block contents
                                 code.language-markup
                                     | #{code}
                                     | #{code1}
+            .section-contents
                 h4.contents-title 텍스트 사용
                 .ga-card.attached
                     .contents-wrapper
@@ -89,6 +92,7 @@ block contents
                             pre
                                 code.language-markup
                                     | #{code}
+            .section-contents
                 h4.contents-title 그림자
                 .ga-card.attached
                     .contents-wrapper
@@ -105,6 +109,7 @@ block contents
                             pre
                                 code.language-markup
                                     | #{code}
+            .section-contents
                 h4.contents-title 정렬
                 .ga-card.attached
                     .contents-wrapper
@@ -122,6 +127,7 @@ block contents
                             pre
                                 code.language-markup
                                     | #{code}
+            .section-contents
                 h4.contents-title 색상
                 .ga-card.attached
                     .contents-wrapper
