--- a/site/views/components/cards.pug
+++ b/site/views/components/cards.pug
@@ -22,6 +22,7 @@ block contents
                             - var code = `\n<div class=\"ga-card\">\n       <!-- insert contents -->\n  </div>\n`
                             pre
                                 code.language-markup= code
+            .section-contents
                 h4.contents-title Title
                 .ga-card.attached
                     .contents-wrapper.contents
@@ -33,6 +34,7 @@ block contents
                             - var code = `\n<div class=\"ga-card\">\n       <div class=\"title\">Title</div>\n       <!-- insert contents -->\n  </div>\n`
                             pre
                                 code.language-markup= code
+            .section-contents
                 h4.contents-title Attached (header, footer)
                 .ga-card.attached
                     .contents-wrapper.contents
