--- a/site/views/components/checkbox.pug
+++ b/site/views/components/checkbox.pug
@@ -33,6 +33,7 @@ block contents
                                 code.language-markup
                                     | #{code}
                                     | #{code1}
+            .section-contents
                 h4.contents-title Check Box
                 .ga-card.attached
                     .contents-wrapper
@@ -45,6 +46,7 @@ block contents
                             pre
                                 code.language-markup
                                     | #{code}
+            .section-contents
                 h4.contents-title Check Box
                 .ga-card.attached
                     .contents-wrapper.check1
@@ -62,6 +64,7 @@ block contents
                             pre
                                 code.language-markup
                                     | #{code}
+            .section-contents
                 h4.contents-title Radio
                 .ga-card.attached
                     .contents-wrapper
