--- a/site/views/components/grid.pug
+++ b/site/views/components/grid.pug
@@ -24,6 +24,7 @@ block contents
                         pre
                             code.language-markup
                                 | #{code}
+            .section-contents
                 h4.contents-title 균등 분할
                 .ga-card.attached
                     .contents-wrapper
@@ -40,6 +41,7 @@ block contents
                             pre
                                 code.language-markup
                                     | #{code}
+            .section-contents
                 h4.contents-title  분할 구성
                 .ga-card.attached
                     .contents-wrapper
