--- a/site/views/components/input.pug
+++ b/site/views/components/input.pug
@@ -21,6 +21,7 @@ block contents
                             pre
                                 code.language-markup
                                     | #{code}
+            .section-contents
                 h4.contents-title Disabled
                 .ga-card.attached
                     .contents-wrapper
@@ -31,6 +32,7 @@ block contents
                             pre
                                 code.language-markup
                                     | #{code}
+            .section-contents
                 h4.contents-title Read only
                 .ga-card.attached
                     .contents-wrapper
@@ -41,6 +43,7 @@ block contents
                             pre
                                 code.language-markup
                                     | #{code}
+            .section-contents
                 h4.contents-title Underline
                 .ga-card.attached
                     .contents-wrapper
@@ -51,6 +54,7 @@ block contents
                             pre
                                 code.language-markup
                                     | #{code}
+            .section-contents
                 h4.contents-title Transparent
                 .ga-card.attached
                     .contents-wrapper
@@ -61,6 +65,7 @@ block contents
                             pre
                                 code.language-markup
                                     | #{code}
+            .section-contents
                 h4.contents-title Compact
                 .ga-card.attached
                     .contents-wrapper
@@ -71,6 +76,7 @@ block contents
                             pre
                                 code.language-markup
                                     | #{code}
+            .section-contents
                 h4.contents-title Edit
                 .ga-card.attached
                     .contents-wrapper
@@ -83,6 +89,7 @@ block contents
                             pre
                                 code.language-markup
                                     | #{code}
+            .section-contents
                 h4.contents-title Status
                 .ga-card.attached
                     .contents-wrapper
@@ -107,6 +114,7 @@ block contents
                             pre
                                 code.language-markup
                                     | #{code}
+            .section-contents
                 h4.contents-title Fluid
                 .ga-card.attached
                     .contents-wrapper
@@ -117,6 +125,7 @@ block contents
                             pre
                                 code.language-markup
                                     | #{code}
+            .section-contents
                 h4.contents-title Unit
                 .ga-card.attached
                     .contents-wrapper
@@ -127,6 +136,7 @@ block contents
                             pre
                                 code.language-markup
                                     | #{code}
+            .section-contents
                 h4.contents-title Icon
                 .ga-card.attached
                     .contents-wrapper
@@ -159,6 +169,7 @@ block contents
                                     | #{code1}
                                     | #{`<!-- Both -->`}
                                     | #{code2}
+            .section-contents
                 h4.contents-title Badge
                 .ga-card.attached
                     .contents-wrapper
@@ -170,6 +181,7 @@ block contents
                             pre
                                 code.language-markup
                                     | #{code}
+            .section-contents
                 h4.contents-title Label
                 .ga-card.attached
                     .contents-wrapper
@@ -191,6 +203,7 @@ block contents
                                     | #{code}
                                     | #{`<!-- Right -->`}
                                     | #{code1}
+            .section-contents
                 h4.contents-title Button
                 .ga-card.attached
                     .contents-wrapper
@@ -210,6 +223,7 @@ block contents
                                     | #{code}
                                     | #{`<!-- Right -->`}
                                     | #{code1}
+            .section-contents
                 h4.contents-title Textarea
                 .ga-card.attached
                     .contents-wrapper
