--- a/site/views/components/list.pug
+++ b/site/views/components/list.pug
@@ -37,6 +37,7 @@ block contents
                                 | #{code_e}
                                 | #{code_c_3}
                                 | #{code_f}
+            .section-contents
                 h4.contents-title List Style
                 .ga-card.attached
                     .contents-wrapper
@@ -59,6 +60,7 @@ block contents
                                     | #{code_e}
                                     | #{code_c_3}
                                     | #{code_f}
+            .section-contents
                 h4.contents-title 선택된 아이템
                 .ga-card.attached
                     .contents-wrapper
@@ -81,6 +83,7 @@ block contents
                                     | #{code_e}
                                     | #{code_c_3}
                                     | #{code_f}
+            .section-contents
                 h4.contents-title Sub Title
                 .ga-card.attached
                     .contents-wrapper
@@ -112,6 +115,7 @@ block contents
                                     | #{code_e}
                                     | #{code_c_3}
                                     | #{code_f}
+            .section-contents
                 h4.contents-title Icons
                 .ga-card.attached
                     .contents-wrapper
@@ -142,6 +146,7 @@ block contents
                                     | #{code_e}
                                     | #{code_c_3}
                                     | #{code_f}
+            .section-contents
                 h4.contents-title Icons
                 .ga-card.attached
                     .contents-wrapper
@@ -160,6 +165,7 @@ block contents
                                         i.xi-plus
                             .item
                                 .item-title Option 3
+            .section-contents
                 h4.contents-title Bordered
                 .ga-card.attached
                     .contents-wrapper
@@ -182,6 +188,7 @@ block contents
                                     | #{code_e}
                                     | #{code_c_3}
                                     | #{code_f}
+            .section-contents
                 h4.contents-title Image
                 .ga-card.attached
                     .contents-wrapper
