--- a/site/views/components/message.pug
+++ b/site/views/components/message.pug
@@ -23,6 +23,7 @@ block contents
                         pre 
                             code.language-markup 
                                 | #{code}
+            .section-contents
                 h4.contents-title 상태
                 .ga-card.attached
                     .contents-wrapper
