--- a/site/views/components/selectbox.pug
+++ b/site/views/components/selectbox.pug
@@ -50,6 +50,7 @@ block contents
                                 | #{code_f_4}
                                 | #{code_f_3}
                                 | #{code_f_1}
+            .section-contents
                 h4.contents-title 기본 - Float
                 .ga-card.attached
                     .contents-wrapper
@@ -80,6 +81,7 @@ block contents
                                 | #{code_f_2}
                                 | #{code_e}
                                 | #{code_f_1}
+            .section-contents
                 h4.contents-title Compact
                 .ga-card.attached
                     .contents-wrapper
@@ -110,6 +112,7 @@ block contents
                                 | #{code_f_2}
                                 | #{code_e}
                                 | #{code_f_1}
+            .section-contents
                 h4.contents-title use 'Select' tag
                 .ga-card.attached
                     .contents-wrapper
@@ -141,6 +144,7 @@ block contents
                                 | #{code_c_3}
                                 | #{code_f_1}
                                 
+            .section-contents
                 h4.contents-title Compact
                 .ga-card.attached
                     .contents-wrapper
