--- a/site/views/components/tabs.pug
+++ b/site/views/components/tabs.pug
@@ -40,6 +40,7 @@ block contents
                                 | #{code_c_3}
                                 | #{code_2_f}
                                 | #{code_1_f}
+            .section-contents
                 h4.contents-title Vertical
                 .ga-card.attached
                     .contents-wrapper
@@ -67,6 +68,7 @@ block contents
                                 | #{code_c_3}
                                 | #{code_2_f}
                                 | #{code_1_f}
+            .section-contents
                 h4.contents-title Active (Line)
                 .ga-card.attached
                     .contents-wrapper
@@ -102,6 +104,7 @@ block contents
                                 | #{code_c_3}
                                 | #{code_2_f}
                                 | #{code_1_f}
+            .section-contents
                 h4.contents-title Active (Button)
                 .ga-card.attached
                     .contents-wrapper
@@ -133,6 +136,7 @@ block contents
                                 | #{code_c_3}
                                 | #{code_2_f}
                                 | #{code_1_f}
+            .section-contents
                 h4.contents-title Browser Tab
                 .ga-card.attached
                     .contents-wrapper
