--- a/site/views/components/tag.pug
+++ b/site/views/components/tag.pug
@@ -44,6 +44,7 @@ block contents
                                     | #{code1}
                                     | #{`<!-- Dot Type -->`}
                                     | #{code2}
+            .section-contents
                 h4.contents-title icon (only label type)
                 .ga-card.attached
                     .contents-wrapper
@@ -74,6 +75,7 @@ block contents
                                     | #{code}
                                     | #{`<!-- Right -->`}
                                     | #{code1}
+            .section-contents
                 h4.contents-title Tags
                 .ga-card.attached
                     .contents-wrapper
@@ -86,6 +88,7 @@ block contents
                             pre
                                 code.language-markup
                                     | #{code}
+            .section-contents
                 h4.contents-title Hover Effect
                 .ga-card.attached
                     .contents-wrapper
@@ -99,6 +102,7 @@ block contents
                             pre
                                 code.language-markup
                                     | #{code}
+            .section-contents
                 h4.contents-title Brand Colors
                 .ga-card.attached
                     .contents-wrapper
@@ -114,6 +118,7 @@ block contents
                                 code.language-markup
                                     | #{`<!-- primary, secondary, success, danger, info, attention, importance -->`}
                                     | #{code}
+            .section-contents
                 h4.contents-title Colors
                 .ga-card.attached
                     .contents-wrapper
