--- a/site/views/components/toast.pug
+++ b/site/views/components/toast.pug
@@ -16,6 +16,7 @@ block contents
                     .contents-wrapper.ex_toast_board
                         .toast.ga-success
                             .toast-contents success
+            .section-contents
                 h4.contents-title 닫기 버튼 사용
                 .ga-card.attached
                     .contents-wrapper.ex_toast_board
@@ -23,6 +24,7 @@ block contents
                             .toast-contents success
                             .toast-close
                                 i.xi-close
+            .section-contents
                 h4.contents-title 아이콘 표시
                 .ga-card.attached
                     .contents-wrapper.ex_toast_board
@@ -50,6 +52,7 @@ block contents
                             .toast-icon
                                 i.xi-info
                             .toast-contents Importance
+            .section-contents
                 h4.contents-title 동그랗게
                 .ga-card.attached
                     .contents-wrapper.ex_toast_board
@@ -59,6 +62,7 @@ block contents
                             .toast-contents success
                             .toast-close
                                 i.xi-close
+            .section-contents
                 h4.contents-title 스타일
                 .ga-card.attached
                     .contents-wrapper.ex_toast_board
@@ -91,6 +95,7 @@ block contents
                                 span.bolder Light type
                             .toast-close
                                 i.xi-close
+            .section-contents
                 h4.contents-title 테스트
                 .ga-card.attached
                     .contents-wrapper.open-btn
@@ -112,6 +117,8 @@ block contents
                         div.ga-tag.label.deeppurple deeppurple
                         div.ga-tag.label.purple purple
                         div.ga-tag.label.brown brown
-                    button.ga-button.clear-btn Clear
+                    .footer
+                        button.ga-button.primary.run-btn 실행
+                        button.ga-button.outline.clear-btn Clear
 block module 
     script(src="/js/toast.js")
