--- a/site/views/components/button.pug
+++ b/site/views/components/button.pug
@@ -20,6 +20,7 @@ block contents
                         - var code = '<button class="ga-button">기본</button>';
                             pre
                                 code.language-markup #{code}
+            .section-contents
                 h4.contents-title Element Type
                 .ga-card.attached
                     .contents-wrapper
@@ -32,6 +33,7 @@ block contents
                             code.language-markup
                                 | #{code1}
                                 | #{code2}
+            .section-contents
                 h4.contents-title Brand Color
                 .ga-card.attached
                     .contents-wrapper
@@ -58,6 +60,7 @@ block contents
                             pre
                                 code.language-markup
                                     | #{code}
+            .section-contents
                 h4.contents-title Colors
                 .ga-card.attached
                     - var colors1 = [{name: 'red', text: '빨강'},{name: 'orange', text: '주황'},{name: 'yellow', text: '노랑'},{name: 'lightgreen', text: '연두'},{name: 'green', text: '초록'},{name: 'lightblue', text: '하늘'},{name: 'blue', text: '파랑'}];
@@ -79,6 +82,7 @@ block contents
                             pre
                                 code.language-markup
                                     | #{code}
+            .section-contents
                 h4.contents-title Disabled
                 .ga-card.attached
                     .contents-wrapper
@@ -91,6 +95,7 @@ block contents
                                 code.language-markup
                                     | #{code}
                                     | #{code1}
+            .section-contents
                 h4.contents-title Border
                 .ga-card.attached
                     .contents-wrapper
@@ -103,6 +108,7 @@ block contents
                                 code.language-markup
                                     | #{code}
                                     | #{code1}
+            .section-contents
                 h4.contents-title Equal
                 .ga-card.attached
                     .contents-wrapper
@@ -123,6 +129,7 @@ block contents
                                 code.language-markup
                                     | #{code}
                                     | #{code1}
+            .section-contents
                 h4.contents-title Fluid
                 .ga-card.attached
                     .contents-wrapper
@@ -139,6 +146,7 @@ block contents
                             pre
                                 code.language-markup
                                     | #{code}
+            .section-contents
                 h4.contents-title Compact
                 .ga-card.attached
                     .contents-wrapper
@@ -162,6 +170,7 @@ block contents
                             pre
                                 code.language-markup
                                     | #{code}
+            .section-contents
                 h4.contents-title Outline
                 .ga-card.attached
                     .contents-wrapper
@@ -171,7 +180,8 @@ block contents
                             pre
                                 code.language-markup
                                     | #{code}
-                h4.contents-title Icon (*Awesome Font 6)
+            .section-contents
+                h4.contents-title Icon (* required - Xeicon 2.3.3)
                 .ga-card.attached
                     .contents-wrapper
                         .ga-button.icon
@@ -185,6 +195,7 @@ block contents
                             pre
                                 code.language-markup
                                     | #{code}
+            .section-contents
                 h4.contents-title Circle
                 .ga-card.attached
                     .contents-wrapper
@@ -198,6 +209,7 @@ block contents
                             pre
                                 code.language-markup
                                     | #{code}
+            .section-contents
                 h4.contents-title Icon
                 .ga-card.attached
                     .contents-wrapper
@@ -214,6 +226,7 @@ block contents
                                 code.language-markup
                                     | #{code}
                                     | #{code1}
+            .section-contents
                 h4.contents-title With Badge
                 .ga-card.attached
                     .contents-wrapper
@@ -230,6 +243,7 @@ block contents
                                 code.language-markup
                                     | #{code}
                                     | #{code0}
+            .section-contents
                 h4.contents-title Text
                 .ga-card.attached
                     .contents-wrapper
@@ -255,6 +269,7 @@ block contents
                             pre
                                 code.language-markup
                                     | #{code}
+            .section-contents
                 h4.contents-title Buttons
                 .ga-card.attached
                     .contents-wrapper
