--- a/site/views/components/form.pug
+++ b/site/views/components/form.pug
@@ -23,6 +23,7 @@ block contents
                         pre
                             code.language-markup
                                 | #{code}
+            .section-contents
                 h4.contents-title Header
                 .ga-card.attached
                     .contents-wrapper
@@ -37,6 +38,7 @@ block contents
                             pre
                                 code.language-markup
                                     | #{code}
+            .section-contents
                 h4.contents-title Inline
                 .ga-card.attached
                     .contents-wrapper
@@ -51,6 +53,7 @@ block contents
                             pre
                                 code.language-markup
                                     | #{code}
+            .section-contents
                 h4.contents-title Label
                 .ga-card.attached
                     .contents-wrapper
@@ -93,6 +96,7 @@ block contents
                                     | #{code1_4}
                                     | #{code1_5}
                                     | #{code1_6}
+            .section-contents
                 h4.contents-title Field
                 .ga-card.attached
                     .contents-wrapper
@@ -108,6 +112,7 @@ block contents
                             pre
                                 code.language-markup
                                     | #{code}
+            .section-contents
                 h4.contents-title Fields
                 .ga-card.attached
                     .contents-wrapper
@@ -139,6 +144,7 @@ block contents
                                     | #{code_3_3}
                                     | #{code_2_e}
                                     | #{code_1_e}
+            .section-contents
                 h4.contents-title Field
                 .ga-card.attached
                     .contents-wrapper
@@ -154,6 +160,7 @@ block contents
                             pre
                                 code.language-markup
                                     | #{code}
+            .section-contents
                 h4.contents-title Fields 균등 분할 구성
                 .ga-card.attached
                     .contents-wrapper
@@ -201,6 +208,7 @@ block contents
                                     | #{code_3_3}
                                     | #{code_2_e}
                                     | #{code_1_e}
+            .section-contents
                 h4.contents-title Fields 지정 분할 구성
                 .ga-card.attached
                     .contents-wrapper
@@ -235,6 +243,7 @@ block contents
                                     | #{code_3_3}
                                     | #{code_2_e}
                                     | #{code_1_e}
+            .section-contents
                 h4.contents-title Text Area
                 .ga-card.attached
                     .contents-wrapper
@@ -254,6 +263,7 @@ block contents
                                     | #{code}
                                     |  #{`<!-- Short -->`}
                                     | #{code1}
+            .section-contents
                 h4.contents-title Check Box
                 .ga-card.attached
                     .contents-wrapper
@@ -269,6 +279,7 @@ block contents
                             pre
                                 code.language-markup
                                     | #{code}
+            .section-contents
                 h4.contents-title Radio Button
                 .ga-card.attached
                     .contents-wrapper
@@ -308,6 +319,7 @@ block contents
                             pre
                                 code.language-markup
                                     | #{code}
+            .section-contents
                 h4.contents-title Select Box
                 .ga-card.attached
                     .contents-wrapper
