--- a/site/views/components/grid2.pug
+++ b/site/views/components/grid2.pug
@@ -24,6 +24,7 @@ block contents
                         pre
                             code.language-markup
                                 | #{code}
+            .section-contents
                 h4.contents-title 분할 구성
                 .ga-card.attached
                     .contents-wrapper
@@ -45,6 +46,7 @@ block contents
                             pre
                                 code.language-markup
                                     | #{code}
+            .section-contents
                 h4.contents-title 분할 구성 (+ROW)
                 .ga-card.attached
                     .contents-wrapper
@@ -61,6 +63,7 @@ block contents
                             pre
                                 code.language-markup
                                     | #{code}
+            .section-contents
                 h4.contents-title Auto-fit
                 .ga-card.attached
                     .contents-wrapper
@@ -74,6 +77,7 @@ block contents
                             pre
                                 code.language-markup
                                     | #{code}
+            .section-contents
                 h4.contents-title  Grid + Table
                 .ga-card.attached
                     .contents-wrapper
