--- a/src/definitions/bases/root.scss
+++ b/src/definitions/bases/root.scss
@@ -9,7 +9,7 @@
     --hover-suf: #{map.get($grays, 'gray-10')};
 
     --depth-bg: #{map.get($grays, 'gray-0')};
-    --depth-bs: 0 0 16px 2px rgba(0, 0, 0, 0.16);
+    --depth-bs: 0 1px 8px 1px rgba(0, 0, 0, 0.16);
 
     --mobile-p: #{map.get($breakpoints, 'xs')};
     --mobile-l: #{map.get($breakpoints, 'sm')};
@@ -27,7 +27,7 @@
         --suf: #{map.get($grays, 'gray-90')};
         --hover-suf: #{map.get($grays, 'gray-90')};
 
-        --depth-bg: color-mix(in oklab, #{map.get($grays, 'gray-95')}, rgba(0, 0, 0, 0.16));
+        --depth-bg: color-mix(in oklab, #{map.get($grays, 'gray-95')}, rgba(255, 255, 255, 0.04));
         // --depth-bg: #{map.get($grays, 'gray-80')};
         // --depth-bg: rgba(0, 0, 0, 0.2);
         --depth-bs: none;
@@ -42,7 +42,7 @@
     --hover-suf: #{map.get($grays, 'gray-10')};
 
     --depth-bg: #{map.get($grays, 'gray-0')};
-    --depth-bs: 0 0 16px 2px rgba(0, 0, 0, 0.16);
+    --depth-bs: 0 1px 8px 1px rgba(0, 0, 0, 0.16);
 }
 
 :root.dark-mode {
@@ -53,7 +53,7 @@
     --hover-suf: #{map.get($grays, 'gray-85')};
 
     // --depth-bg: #{map.get($grays, 'gray-80')};
-    --depth-bg: color-mix(in srgb, #{map.get($grays, 'gray-95')}, rgba(0, 0, 0, 0.16));
+    --depth-bg: color-mix(in srgb, #{map.get($grays, 'gray-95')}, rgba(255, 255, 255, 0.04));
     --depth-bs: 0 0 0 1px rgba(0, 0, 0, 0.16);
 }
 
