--- a/src/definitions/components/switch.scss
+++ b/src/definitions/components/switch.scss
@@ -69,11 +69,44 @@
     }
   }
   &.button {
+    position: relative;
     font-size: 0.9em;
-    background-color: #EFEFEF;
+    background-color: var(--suf);
+    box-shadow: 0 0 0 1px var(--brd);
     padding: 2px;
     border-radius: $switchRadiusSize;
-    //box-shadow: inset 0 0 5px 1px rgba(0, 0, 0, 0.16);
+    // box-shadow: inset 0 0 5px 1px rgba(0, 0, 0, 0.16);
+    &:before {
+      content: '';
+      position: absolute;
+      border-radius: $switchRadiusSize;
+      background-color: #6d9d72;
+      width: calc(50% - 2px);
+      height: calc(100% - 4px);
+      top: 2px;
+      right: 2px;
+      transition: right 250ms ease;
+    }
+    &:has(input:checked) {
+      &:before {
+        right: 50%;
+      }
+    }
+    span {
+      background-color: transparent !important;
+      position: relative;
+      z-index: 3;
+    }
+    &.round {
+      border-radius: 1em;
+      span.on,
+      span.off {
+        border-radius: 1em;
+      }
+      &:before {
+        border-radius: 1em;
+      }
+    }
     input {
       & ~ .off {
         background-color: $primary;
@@ -96,16 +129,16 @@
       }
       & ~ .off {
         background-color: transparent;
-        color: #333333;
+        color: var(--txt);
         box-shadow: none;
       }
     }
-    &.round {
-      border-radius: calc(1em + 2px);
-      span.on, span.off {
-        border-radius: 1em;
-      }
-    }
+    // &.round {
+    //   border-radius: calc(1em + 2px);
+    //   span.on, span.off {
+    //     border-radius: 1em;
+    //   }
+    // }
     span {
       display: inline-block;
       padding: 0.5em 0.8em;
