--- a/src/definitions/components/tag.scss
+++ b/src/definitions/components/tag.scss
@@ -18,16 +18,16 @@
   }
   &.label {
     vertical-align: baseline;
-    font-size: 0.8rem;
+    font-size: 0.8em;
     font-weight: 400;
-    line-height: 1em;
+    line-height: 2em;
     border-radius: 2em;
     font-family: $fontName;
     display: inline-block;
     margin: 0 0.14285714em;
     background-color: $baseTagColor;
     background-image: none;
-    padding: 0.5833em 0.833em;
+    padding: 0 0.833em;
     text-transform: none;
     border: 0 solid transparent;
     transition: background .1s ease;
