--- a/site/views/components/colors.pug
+++ b/site/views/components/colors.pug
@@ -94,7 +94,7 @@ block contents
                         .color-box.small.gray-95 95
                         .color-box.small.gray-100 Black (100)
                     .footer 
-                        - var code_type_colors = '// grays = [0, 5, 10, 15, 20, 30, 40, 50, 60, 70, 80, 85, 90, 95, 100]'
+                        - var code_type_colors = '<!-- grays = [0, 5, 10, 15, 20, 30, 40, 50, 60, 70, 80, 85, 90, 95, 100] -->'
                         - var code_type_color_0 = '<div class="gray-0">...</div>'
                         - var code_type_color_100 = '<div class="gray-100">...</div>'
                         pre 
@@ -116,7 +116,7 @@ block contents
                         each color in colors
                             div(class=`color-box ga-${color.name}-2 bordered`)=color.text
                     .footer 
-                        - var code_type_colors = '// colors = [red, orange, yellow, lightgreen, green, lightblue, blue, deepblue, deeppurple, brown, gray]'
+                        - var code_type_colors = '<!-- colors = [red, orange, yellow, lightgreen, green, lightblue, blue, deepblue, deeppurple, brown, gray] -->'
                         - var code_type_color_red = '<div class="red">...</div>'
                         - var code_type_color_orange = '<div class="orange">...</div>'
                         pre 
