--- a/site/views/components/badge.pug
+++ b/site/views/components/badge.pug
@@ -7,7 +7,7 @@ block contents
     .page-wrapper
         section#badge
             .section-title
-                h1 Badge
+                h1= title
                 .section-desc 
                     p Small visual indicators showing counts or statuses.
             .section-contents
