--- a/site/views/components/button.pug
+++ b/site/views/components/button.pug
@@ -8,7 +8,7 @@ block contents
     .page-wrapper
         section#button.d-mode-border-color
             .section-title
-                h1 Buttons
+                h1= title
                 .section-desc 
                     p Interactive buttons with variants for size, color, and state.
             .section-contents
