--- a/site/views/components/cards.pug
+++ b/site/views/components/cards.pug
@@ -7,7 +7,7 @@ block contents
     .page-wrapper
         section#tabs
             .section-title
-                h1 Cards
+                h1= title
                 .section-desc 
                     p Content containers for grouping text, images, and actions.
             .section-contents
