--- a/site/views/components/checkbox.pug
+++ b/site/views/components/checkbox.pug
@@ -7,7 +7,7 @@ block contents
     .page-wrapper
         section#checkbox
             .section-title
-                h1 Check Box
+                h1= title
                 .section-desc 
                     p Multi-select input with accessible and clear visual states.
             .section-contents
