--- a/site/views/components/colors.pug
+++ b/site/views/components/colors.pug
@@ -7,7 +7,7 @@ block contents
     .page-wrapper
         section#typography
             .section-title
-                h1 Colors
+                h1= title
                 .section-desc
                     p Defined color tokens for branding, backgrounds, and UI states. 
             .section-contents
