--- a/site/views/components/form.pug
+++ b/site/views/components/form.pug
@@ -7,7 +7,7 @@ block contents
     .page-wrapper
         section#form
             .section-title
-                h1 Form
+                h1= title
                 .section-desc 
                     p Grouped input structure with labels, validation, and layout.
             .section-contents
