--- a/site/views/components/grid.pug
+++ b/site/views/components/grid.pug
@@ -7,7 +7,7 @@ block contents
     .page-wrapper       
         section#grid
             .section-title
-                h1 Grid
+                h1= title
                 .section-desc 
                     p Layout utility using CSS Grid for structured alignment.(Flex)
             .section-contents
