--- a/site/views/components/input.pug
+++ b/site/views/components/input.pug
@@ -7,7 +7,7 @@ block contents
     .page-wrapper
         section#input
             .section-title
-                h1 Inputs
+                h1= title
                 .section-desc
                     p Text input fields with consistent styling and focus handling.
             .section-contents
