--- a/site/views/components/list.pug
+++ b/site/views/components/list.pug
@@ -7,7 +7,7 @@ block contents
     .page-wrapper
         section#list
             .section-title
-                h1 List
+                h1= title
                 .section-desc 
                     p Structured list styling for displaying repeated content.  
             .section-contents
