--- a/site/views/components/message.pug
+++ b/site/views/components/message.pug
@@ -7,7 +7,7 @@ block contents
     .page-wrapper
         section#alert
             .section-title
-                h1 Message
+                h1= title
                 .section-desc 
                     p Informational, warning, or error messages for user feedback.
             .section-contents
