--- a/site/views/components/modal.pug
+++ b/site/views/components/modal.pug
@@ -7,7 +7,7 @@ block contents
     .page-wrapper
         section#modal
             .section-title
-                h1 Modal
+                h1= title
                 .section-desc 
                     p Overlay dialog UI for alerts or focused interactions.
             .section-contents
