--- a/site/views/components/pagination.pug
+++ b/site/views/components/pagination.pug
@@ -7,7 +7,7 @@ block contents
     .page-wrapper
         section#pagination
             .section-title
-                h1 Pagination
+                h1= title
                 .section-desc 
                     p UI for navigating through multiple pages of content. 
             .section-contents
