--- a/site/views/components/selectbox.pug
+++ b/site/views/components/selectbox.pug
@@ -7,14 +7,14 @@ block contents
     .page-wrapper
         section#selectbox
             .section-title
-                h1 Selectbox
+                h1= title
                 .section-desc 
                     p Dropdown UI for selecting a single item from options.
             .section-contents
                 h4.contents-title 기본 - Dropdown
                 .ga-card.attached
                     .contents-wrapper
-                        .ga-select-box.dropdown
+                        .ga-select-box.dropdown.open
                             .selected-item.ga-input.icon.right
                                 input(type="text", placeholder="선택하세요", readonly)
                                 i.icon.xi-angle-down
