--- a/site/views/components/switch.pug
+++ b/site/views/components/switch.pug
@@ -7,7 +7,7 @@ block contents
     .page-wrapper
         section#switch
             .section-title
-                h1 Switch
+                h1= title
                 .section-desc 
                     p Toggle-style input for on/off states with smooth transitions.
             .section-contents
