--- a/site/views/components/table.pug
+++ b/site/views/components/table.pug
@@ -7,7 +7,7 @@ block contents
     .page-wrapper
         section#table
             .section-title
-                h1 Table
+                h1= title
                 .section-desc
                     p Data tables with support for rows, headers, and styling.
             - var rows = [{name: '김아무개', age: 11, job: '학생'},{name: '이아무개', age: 17, job: '대학생'},{name: '박아무개', age: 31, job: '대학원생'},]
