--- a/site/views/components/tabs.pug
+++ b/site/views/components/tabs.pug
@@ -7,7 +7,7 @@ block contents
     .page-wrapper
         section#tabs
             .section-title
-                h1 Tabs
+                h1= title
                 .section-desc 
                     p UI for toggling between content sections in a tabbed layout. 
             .section-contents
