--- a/site/views/components/tag.pug
+++ b/site/views/components/tag.pug
@@ -7,7 +7,7 @@ block contents
     .page-wrapper
         section#tag
             .section-title
-                h1 Tag
+                h1= title
                 .section-desc 
                     p Compact label elements used for status indicators or filters. 
             .section-contents
