--- a/site/views/components/toast.pug
+++ b/site/views/components/toast.pug
@@ -7,7 +7,7 @@ block contents
     .page-wrapper
         section#toast
             .section-title
-                h1 Toast
+                h1= title
                 .section-desc 
                     p Temporary, auto-dismissable message for quick user feedback.
             .section-contents
