--- a/site/views/components/calendar.pug
+++ b/site/views/components/calendar.pug
@@ -7,7 +7,7 @@ block contents
   .page-wrapper
     section#calendar
       .section-title
-        h1 Calendar
+        h1= title
         .section-desc 
           p Date picker and scheduling UI component.
       .section-contents
