--- a/site/views/components/grid2.pug
+++ b/site/views/components/grid2.pug
@@ -7,7 +7,7 @@ block contents
     .page-wrapper
         section#grid
             .section-title
-                h1 Grid 2
+                h1= title
                 .section-desc
                     p Layout utility using CSS Grid for structured alignment.(Grid)
             .section-contents
