--- a/site/views/components/panel.pug
+++ b/site/views/components/panel.pug
@@ -7,7 +7,7 @@ block contents
     .page-wrapper
         section#panel
             .section-title
-                h1 Panel
+                h1= title
                 .section-desc
                     p Expandable/collapsible side or content panels.
             .section-contents
